Update app icon

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Nunito:wght@200;300;400;600;800&display=swap"
     />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/svg+xml" href="/birthday-cake.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CakeCalc</title>
   </head>
