refactor(style-updates): Correct MainContainer rwd

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link
       rel="icon"
       type="image/svg+xml"
-      href="/src/assets/illustrations/darkCake.png"
+      href="/src/assets/illustrations/darkCake.svg"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CakeCalc</title>
